feat: add oui panel telegram and info preview
